# Conway-s-Game-of-Life

./: CMakeLists.txt  README.md  main.cpp
Controller/: Map.cpp  Map.h
Model/: MMap.cpp  MMap.h
View/: VMap.cpp  VMap.h
